--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#nprogress {
+    .peg {
+        display: none !important;
+    }
+    .bar {
+        @apply bg-primary-700 !important;
+    }
+}
